--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -9,13 +9,13 @@
   "author": "Jason Dent <jason@streetsidesoftware.nl>",
   "homepage": "https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell-glob#readme",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
-    "lib": "lib"
+    "dist": "dist"
   },
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
-    "lib/**",
+    "dist/**",
     "!**/*.test.*",
     "!**/*.spec.*",
     "!**/*.map"
@@ -23,6 +23,8 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
+    "lint": "eslint --fix .",
+    "lint-ci": "eslint .",
     "clean": "rimraf lib",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
@@ -43,6 +45,13 @@
     "micromatch": "^4.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
 }
